-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.0
-
None
-
0e241ce38 (dev)
Build fails `-DFEATURE_style_stylesheet=OFF` like this
FAILED: qttools/src/linguist/linguist/CMakeFiles/linguist.dir/finddialog.cpp.o /usr/bin/ccache /usr/bin/c++ -DQFORMINTERNAL_NAMESPACE -DQT_CORE_LIB -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_KEYWORDS -DQT_NO_AS_CONST=1 -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_PRINTSUPPORT_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/build/debian/build-host/qttools/src/linguist/linguist/linguist_autogen/include -I/build/qttools/src/linguist/linguist -I/build/debian/build-host/qttools/src/linguist/linguist -I/build/qttools/src/linguist/linguist/../shared -I/build/debian/build-host/qtbase/include -I/build/debian/build-host/qtbase/include/QtCore -I/build/qtbase/mkspecs/linux-g++ -I/build/debian/build-host/qtbase/src/corelib -I/build/debian/build-host/qtbase/include/QtCore/6.9.0 -I/build/debian/build-host/qtbase/include/QtCore/6.9.0/QtCore -I/build/debian/build-host/qtbase/include/QtGui -I/build/debian/build-host/qtbase/src/gui -I/build/debian/build-host/qtbase/include/QtGui/6.9.0 -I/build/debian/build-host/qtbase/include/QtGui/6.9.0/QtGui -I/build/debian/build-host/qtbase/include/QtUiTools -I/build/debian/build-host/qtbase/include/QtWidgets -I/build/debian/build-host/qttools/src/uitools -I/build/debian/build-host/qtbase/include/QtUiTools/6.9.0 -I/build/debian/build-host/qtbase/include/QtUiTools/6.9.0/QtUiTools -I/build/debian/build-host/qtbase/include/QtPrintSupport -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/88609d -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/e2a0af -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/6eed79 -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/fc76ef -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/28986b -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/b9f53d -isystem /build/debian/build-host/qttools/src/linguist/linguist/.qt/af98b3 -std=gnu++17 -fPIE -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fPIC -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=2 -ftrivial-auto-var-init=pattern -fstack-protector-strong -fstack-clash-protection -fno-exceptions -MD -MT qttools/src/linguist/linguist/CMakeFiles/linguist.dir/finddialog.cpp.o -MF qttools/src/linguist/linguist/CMakeFiles/linguist.dir/finddialog.cpp.o.d -o qttools/src/linguist/linguist/CMakeFiles/linguist.dir/finddialog.cpp.o -c /build/qttools/src/linguist/linguist/finddialog.cpp /build/qttools/src/linguist/linguist/finddialog.cpp: In member function 'void FindDialog::verify()': /build/qttools/src/linguist/linguist/finddialog.cpp:45:14: error: 'class QLineEdit' has no member named 'setStyleSheet'; did you mean 'setStyle'? 45 | led->setStyleSheet(QStringLiteral("color: auto;")); | ^~~~~~~~~~~~~ | setStyle /build/qttools/src/linguist/linguist/finddialog.cpp:47:14: error: 'class QLineEdit' has no member named 'setStyleSheet'; did you mean 'setStyle'? 47 | led->setStyleSheet(QStringLiteral("color: red;")); | ^~~~~~~~~~~~~ | setStyle
For Gerrit Dashboard: QTBUG-136342 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
642784,2 | linguist: make style_stylesheet feature optional | dev | qt/qttools | Status: MERGED | +2 | 0 |