linguist: make style_stylesheet feature optional

building linguist with -DFEATURE_style_stylesheet=OFF fails since
stylesheets are used in two places. In one case it can be entirely
replaced by QPalette. In the other, it's non-critical and can
be made optional, without affecting the user experience.

Fixes: QTBUG-136342
Change-Id: I2b7612bfa2ac6cf5d2a040a948d3a6f5d9ac7e6e
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>